--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,10 +13,23 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./tsconfig.json"]
+    "project": [
+      "./tsconfig.json"
+    ]
   },
-  "plugins": ["react"],
-  "rules": {},
+  "plugins": [
+    "react"
+  ],
+  "rules": {
+    "semi": [
+      "error",
+      "never"
+    ],
+    "@typescript-eslint/strict-boolean-expressions": [
+      "warn",
+      "never"
+    ]
+  },
   "settings": {
     "react": {
       "version": "detect"
