--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "use-position": "^1.0.0",
+    "@types/use-position": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/google-map-react": "^2.1.7",
     "@types/jest": "^29.2.4",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
@@ -39,6 +42,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
+    "google-map-react": "^2.2.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.3.1",
